test/errors/error26.base
This type declaration is empty
type foo {
           ^ 
